--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,19 +1,15 @@
-# https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = wezterm
-$browser = qutebrowser
-$fileManager = vifm
-$menu = rofi -show drun 
 
 #{{{ ## AUTOSTART ###
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
 exec-once = mega-sync
-exec-once = $terminal
+exec-once = $TERMINAL
 exec-once = systemctl  --user start hyprpolkitagent
-exec-once = kanata -c ~/.config/kanata/kanata.kbd
+exec-once = kanata -c $HOME/.config/kanata/kanata.kbd
+exec-once = hyprscratch init clean no-auto-reload
+# exec-once = /home/miro/.bin/kanata -c $HOME/.config/kanata/kanata.kbd
+
 # exec-once = pueued
 # sleep 200 && newsboat -x reload &
 # exec-once = nm-applet &
@@ -26,7 +22,7 @@ exec-once = kanata -c ~/.config/kanata/kanata.kbd
 $sup = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $sup, Return, exec, $terminal
+bind = $sup, Return, exec, $TERMINAL
 bind = $sup SHIFT, Return, exec, $TERM_LT
 bind = $sup, Q, killactive,
 bind = $sup SHIFT, Q, exec, qu.clj kill-any
@@ -104,28 +100,41 @@ bindm = $sup, mouse:272, movewindow
 bindm = $sup, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
+# bind = $sup, Plus, exec, pactl set-sink-volume "$(pacmd list-sinks | grep '* index' | awk '{print $3}')" +15%
+# bind = $sup SHIFT, Minus, exec, pactl set-sink-volume "$(pacmd list-sinks | grep '* index' | awk '{print $3}')" -15%
+bindel = $sup, Equal, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = $sup, Minus, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl = $sup, Slash, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = $sup SHIFT, Slash, exec, audio.sh toggle
+bind = $sup CONTROL, Slash, exec, audio.sh
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
+# bindl = $sup, M, exec, mpc toggle
+# bindl = $sup, Comma, exec, mpc prev
+# bindl = $sup, Period, exec, mpc next
+bindl = $sup, M, exec, playerctl play-pause
+bindl = $sup, Comma, exec, playerctl previous
+bindl = $sup, Period, exec, playerctl next
 bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 #}}} 
 
 #{{{ ## APPS
-bind = $sup, F1, exec, $browser
+bind = $sup, F1, exec, $BROWSER
 bind = $sup, F2, exec, /opt/idea-IU-212.5284.40/bin/idea.sh
-bind = $sup, F3, exec, $TERM_LT -c vifm -e vifm
+bind = $sup, F3, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "vifm" "vifm")
 bind = $sup, F4, exec, pcmanfm
 bind = $sup, F5, exec, keecli.sh
-bind = $sup, F6, exec, wezterm start --class 'note' --cwd ~/Documents/notebook -- nvim
-bind = $sup, F7, exec, scratchpad.sh newsboat "wezterm start --class newsboat -- newsboat"
+bind = $sup, F6, exec, scratchpad.sh newsboat "wezterm start --class newsboat -- newsboat"
+bind = $sup, F7, exec, wezterm start --class 'note' --cwd ~/Documents/notebook -- nvim
 bind = $sup, F8, exec, task sync && scratchpad.sh task "$TERM_LT -c task -n -e task taskwarrior-tui"
 bind = $sup, F9, exec, todo.lua add
 bind = $sup, F10, exec, mpv.lua -o ~/Videos
@@ -133,9 +142,11 @@ bind = $sup, F11, exec, sh -c $(ls ~/.bin | rofi -dmenu)
 bind = $sup, F12, exec, rofi -show power-menu -modi power-menu:$ROFI/power.sh
 
 # Scratchpad
-bind = , F12, movetoworkspace, special:dropdown
+# https://github.com/sashetophizika/hyprscratch
+# bind = $MOD, $KEY, exec, hyprscratch $CLIENT_TITLE "$HYPRLAND_EXEC_COMMAND" [SCRATCHPAD_OPTIONS]
+# bind = , F12, movetoworkspace, special:dropdown
 # bind = , F12, exec, scratchpad.sh dropdown "wezterm start --class dropdown"
-
+bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown" persist show
 
 # ROFI
 bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
@@ -235,4 +246,3 @@ source = ~/.config/hypr/look.conf
 # source = ~/.config/hypr/comments.conf
 
 # vi: foldmethod=marker
-# vi: ft conf
