fix(hypr): set qb script to executable

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ exec-once = hyprscratch init clean no-auto-reload
 $sup = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $sup, A, exec, hyprctl notify -1 10000 0 $PATH
 bind = $sup, Return, exec, $TERMINAL
 bind = $sup SHIFT, Return, exec, $TERM_LT
 bind = $sup, Q, killactive,
@@ -145,8 +146,8 @@ bind = $sup, F12, exec, rofi -show power-menu -modi power-menu:$ROFI/power.sh
 # https://github.com/sashetophizika/hyprscratch
 # bind = $MOD, $KEY, exec, hyprscratch $CLIENT_TITLE "$HYPRLAND_EXEC_COMMAND" [SCRATCHPAD_OPTIONS]
 # bind = , F12, movetoworkspace, special:dropdown
-# bind = , F12, exec, scratchpad.sh dropdown "wezterm start --class dropdown"
-bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown" persist show
+# bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown" persist show
+bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown"  toggle
 
 # ROFI
 bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
@@ -175,7 +176,7 @@ bind = $sup CONTROL, Delete, exec, rmmpd-playing.sh
 bind = $sup, Delete, exec, echo 0 | trash-restore "$(trash-list | sort -r | cut -d" " -f3- | rofi -dmenu -threads 0 -monitor -4 -i -l 25 -p "restore" -theme-str 'window \{width:  90%;\}')"
 
 # linux process
-bind = $sup, BackSpace, exec, $TERM_LT -t top -c top -e btop
+bind = $sup, BackSpace, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "top" "btop")
 bind = $sup SHIFT, BackSpace, exec, $ROFI/kill
 bind = $sup CONTROL, BackSpace, exec, xkill
 
