add waybar and swayimg

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,7 +9,11 @@ exec-once = systemctl  --user start hyprpolkitagent
 exec-once = kanata -c $HOME/.config/kanata/kanata.kbd
 exec-once = hyprscratch init clean no-auto-reload
 # exec-once = /home/miro/.bin/kanata -c $HOME/.config/kanata/kanata.kbd
-
+exec-once = waybar
+# exec-once = wl-paste -t text --watch clipman store --max-items=30 --histpath="~/.local/share/clipman/clipman.json" 1>> ~/.local/share/clipman/clipman.log 2>&1
+# exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman/clipman-primary.json"
+# exec-once = setbg
+# exec-once = dunst
 # exec-once = pueued
 # sleep 200 && newsboat -x reload &
 # exec-once = nm-applet &
@@ -55,7 +59,7 @@ bind = $sup, right, movefocus, r
 bind = $sup, up, movefocus, u
 bind = $sup, down, movefocus, d
 
-bind = $sup SHIFT, TAB, cyclenext,
+bind = ALT, Tab, cyclenext,
 # TODO
 # bind = $sup SHIFT, H, moveactive, l
 # bind = $sup SHIFT, J, moveactive, d
