--- a/system/etc/greetd/config.toml
+++ b/system/etc/greetd/config.toml
@@ -3,5 +3,9 @@
 vt = 1
 
 [default_session]
-command = "tuigreet --cmd Hyprland"
+command = "tuigreet --cmd Hyprland --theme border=magenta;text=cyan;prompt=green;time=red;action=blue;button=yellow;container=black;input=red"
 user = "greeter"
+
+[initial_session]
+command = "Hyprland"
+user = "miro"
