--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,3 +1,4 @@
+// killall -SIGUSR2 waybar
 {
     "layer": "top",
     "position": "top",
@@ -15,6 +16,7 @@
         // "custom/khorshididate",
         // "wlr/taskbar",
         "hyprland/workspaces",
+		"hyprland/submap",
     ],
 
     "modules-center": [
@@ -22,11 +24,13 @@
     ],
 
     "modules-right": [
+		"mpris",
         "tray",
+        "pulseaudio/slider",
 		"bluetooth",
         "clock",
         // "battery",
-        "pulseaudio",
+        // "pulseaudio",
         // "pulseaudio#microphone",
         "backlight",
         "cpu",
@@ -50,7 +54,7 @@
 },
     "custom/rofi": {
         "format": "",
-        "on-click": "rofi -theme -show drun",
+        "on-click": "rofi -show drun",
         // "on-click": "rofi -theme ~/.config/rofi/theme/onedark_mini.rasi -show drun",
         "tooltip": false
     },
@@ -70,23 +74,24 @@
 "hyprland/window": {
 // "max-length": 50, nie ma
     // "format": "👉 {initialClass}",
-    "format": "👉 {title}",
+    "format": "{title}",
     "rewrite": {
-        "(.*) — Mozilla Firefox": "🌎 $1",
-        "(.*) - fish": "> [$1]"
+	  "(.{30}).+": "$1",
+        "(.*) - zsh": "> [$1]"
     },
     "separate-outputs": true
 },
     "hyprland/workspaces": {
         "on-click": "activate",
-        "disable-scroll": true,
-        "all-outputs": true,
+        "activate-only": true,
+        // "all-outputs": true,
         "show-special": true,
-        "persistent-workspaces": {
-            "*": [ 1, 2, 3, 4 ],
-        },
     },
-
+"hyprland/submap": {
+    "format": "✌️ {}",
+    "max-length": 8,
+    "tooltip": false
+},
     "wlr/taskbar": {
         "format": "{icon}",
         "icon-size": 12,
@@ -98,7 +103,22 @@
             "rofi"
          ]
     },
-
+"mpris": {
+	"format": "{player_icon} {dynamic}",
+	"format": "{player_icon} {player}",
+	// "format": "{player_icon}",
+	"format-paused": "{status_icon} <i>{dynamic}</i>",
+	// "format-len": 20,
+	"dynamic-len": 3,
+	"player-icons": {
+		"default": "▶",
+		"mpv": "🎵"
+	},
+	"status-icons": {
+		"paused": "⏸"
+	},
+	// "ignored-players": ["firefox"]
+},
     "tray": {
         "icon-size": 12,
         "spacing": 10
@@ -114,7 +134,7 @@
 
     "memory": {
         "interval": 30,
-        "format": "",
+        "format": " {used:0.1f}GB",
         "format-alt-click": "click-right",
         "format-alt": " {}%",
         "max-length": 10,
@@ -125,7 +145,7 @@
     "disk": {
         "interval": 600,
         "format": "󰋊",
-        "path": "/",
+        "path": "/home/miro/",
         "format-alt-click": "click-right",
         "format-alt": "󰋊 {percentage_used}%",
         "tooltip": true,
@@ -162,7 +182,11 @@
         },
         "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
     },
-
+"pulseaudio/slider": {
+    "min": 0,
+    "max": 100,
+    "orientation": "horizontal"
+},
     "pulseaudio": {
         "format": "{icon}",
         "format-muted": "",
@@ -235,15 +259,32 @@
         "tooltip-format-disconnected": "Disconnected",
         "max-length": 50
     },
-
-    "clock": {
-        "timezone": "Asia/Tehran",
-        "format": "{: %H:%M}",
-        "tooltip": true,
-        "on-click": "setbg",
-        "tooltip-format": "{: %A, %B %e %Y}"
+"clock": {
+        "format": " {:%H:%M}",
+        "format-alt": "{:%d-%m-%Y} ",
+        // "tooltip-format": "\n<span size='9pt' font='WenQuanYi Zen Hei Mono'>{calendar}</span>",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "calendar": {
+                    "mode"          : "year",
+                    "mode-mon-col"  : 3,
+                    // "weeks-pos"     : "right",
+                    "on-scroll"     : 1,
+                    "format": {
+                              "months":     "<span color='#ffead3'><b>{}</b></span>",
+                              "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                              "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                              "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                              "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                              }
+                    },
+        "actions":  {
+                    "on-click-right": "mode",
+                    "on-click-forward": "tz_up",
+                    "on-click-backward": "tz_down",
+                    "on-scroll-up": "shift_up",
+                    "on-scroll-down": "shift_down"
+                    }
     },
-
     "custom/khorshididate": { 
         "tooltip" : true,
         "format": " {}",
@@ -253,12 +294,5 @@
         "exec": "~/.config/waybar/scripts/khorshidi-date",
         "return-type" : "json"
     },
-
-   "hyprland/language": {
-        "format": "{}",
-        "on-click": "hyprctl switchxkblayout at-translated-set-2-keyboard next",
-        "format-en": "EN",
-        "format-fa": "FA"
-   },
 
 }
