--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -7,9 +7,11 @@ exec-once = mega-sync
 exec-once = $TERMINAL
 exec-once = systemctl  --user start hyprpolkitagent
 exec-once = kanata -c $HOME/.config/kanata/kanata.kbd
-exec-once = hyprscratch init clean no-auto-reload
+# exec-once = hyprscratch init clean no-auto-reload
+exec-once = hyprscratch init
 # exec-once = /home/miro/.bin/kanata -c $HOME/.config/kanata/kanata.kbd
 exec-once = waybar
+exec-once = wl-paste --watch cliphist store
 # exec-once = wl-paste -t text --watch clipman store --max-items=30 --histpath="~/.local/share/clipman/clipman.json" 1>> ~/.local/share/clipman/clipman.log 2>&1
 # exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman/clipman-primary.json"
 # exec-once = setbg
@@ -35,10 +37,15 @@ bind = $sup, Space, togglefloating,
 bind = $sup SHIFT, Space, pseudo, # dwindle
 bind = $sup SHIFT, L, togglesplit, # dwindle
 bind = $sup SHIFT, J, swapnext,
-bind = $sup, F, fullscreen,
+bind = $sup, F, fullscreen, 1
+bind = $sup CTRL, F, fullscreen, 0
 bind = $sup, U, focusurgentorlast,
-bind = $sup, Z, movetoworkspace, special
-bind = $sup SHIFT, Z, togglespecialworkspace, 
+bind = $sup, Z, movetoworkspacesilent, special
+# to exit special mode; move window to any window
+bind = $sup CTRL, Z, togglespecialworkspace, 
+# Example special workspace (scratchpad)
+bind = $sup,  S, movetoworkspace, special:magic
+bind = $sup CTRL, S, togglespecialworkspace, magic
 
 # Select previous / next active desktop
 # bind = $sup, N, workspace, next ??
@@ -87,10 +94,6 @@ bind = $sup SHIFT, 7, movetoworkspace, 7
 bind = $sup SHIFT, 8, movetoworkspace, 8
 bind = $sup SHIFT, 9, movetoworkspace, 9
 bind = $sup SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $sup, S, togglespecialworkspace, magic
-bind = $sup SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $sup, mouse_down, workspace, e+1
@@ -148,16 +151,20 @@ bind = $sup, F12, exec, rofi -show power-menu -modi power-menu:$ROFI/power.sh
 
 # Scratchpad
 # https://github.com/sashetophizika/hyprscratch
-# bind = $MOD, $KEY, exec, hyprscratch $CLIENT_TITLE "$HYPRLAND_EXEC_COMMAND" [SCRATCHPAD_OPTIONS]
-# bind = , F12, movetoworkspace, special:dropdown
-# bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown" persist show
-bind = , F12, exec, hyprscratch dropdown "[size 70% 80%] wezterm start --class dropdown"  toggle
+bind = SHIFT, F12, exec, wezterm start --class drop
+# todo script for toggle 
+bind = , F12, togglespecialworkspace, drop
+# bind = , F11, exec, wezterm start --class chat
+# bind = , F9, exec, ~/.config/hypr/scratchpad.sh news "wezterm start --class news -- top"
+# bind = , F10, togglespecialworkspace, chat
 
 # ROFI
 bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
 bind = $sup SHIFT, D, exec, rofi -modi drun,keys,run -show drun -show-icons -sidebar-mode -monitor -4 -matching fuzzy
 bind = $sup CONTROL, D, exec, $ROFI/mount-launcher.sh
 # bind = $ALT, Space, exec, $ROFI/expander/expander.sh
+bind = $sup, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+# bind = $sup, V, exec, cliphist list | GDK_SCALE=2 rofi -dmenu | cliphist decode | wl-copy
 
 # Chat
 bind = $sup, R, exec, chat.clj ask --output scratchpad
@@ -200,6 +207,7 @@ bind = $sup CONTROL, T, exec, search.lua --enpl -p
 #}}} 
 
 #{{{ ## RULES
+# windowrule v1 syntax is gone. windowrule now behaves like windowrule, deprecating the windowrule keyword
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
@@ -211,7 +219,127 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = workspace 6 silent, class:^(vifm)$
+# Dialog windows – float+center these windows.
+windowrule = center, title:^(Open File)(.*)$
+windowrule = center, title:^(Select a File)(.*)$
+windowrule = center, title:^(Choose wallpaper)(.*)$
+windowrule = center, title:^(Open Folder)(.*)$
+windowrule = center, title:^(Save As)(.*)$
+windowrule = size 70% 60%, title:^(Save As)$
+windowrule = center, title:^(Library)(.*)$
+windowrule = center, title:^(File Upload)(.*)$
+windowrule = center, title:^(.*)(wants to save)$
+windowrule = center, title:^(.*)(wants to open)$
+windowrule = float, title:^(Open File)(.*)$
+windowrule = float, title:^(Select a File)(.*)$
+windowrule = float, title:^(Choose wallpaper)(.*)$
+windowrule = float, title:^(Open Folder)(.*)$
+windowrule = float, title:^(Save As)(.*)$
+windowrule = float, title:^(Library)(.*)$
+windowrule = float, title:^(File Upload)(.*)$
+windowrule = float, title:^(.*)(wants to save)$
+windowrule = float, title:^(.*)(wants to open)$
+
+windowrule = float, initialTitle:(Open Files)
+windowrule = size 70% 60%, initialTitle:(Open Files)
+
+windowrule = float, center,class:file-roller
+# windowrule = center,class:file-roller
+
+# windowrule = float,class:SpeedCrunch
+# windowrule = center,class:SpeedCrunch
+# windowrule = size 500 500,class:SpeedCrunch
+
+windowrule = float, center, size 1100 700,class:KeePassXC
+# windowrule = center,class:KeePassXC
+# windowrule = size 1100 700,class:KeePassXC
+
+windowrule = float, title:^(pavucontrol)$
+windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
+windowrule = float, title:^(blueman-manager)$
+windowrule = float, title:^(nm-connection-editor)$
+
+windowrule = float,class:zenity
+windowrule = float,class:^([Yy]ad)$
+windowrule = float, class:^([Qq]alculate-gtk)$
+windowrule = float,class:menu
+
+# scratchpads 
+# workspace = special:special, gapsout:30
+windowrule = workspace special:drop, class:^(drop)$
+windowrule = float, center, size 900 600, workspace special:drop, class:^(drop)$
+windowrule = workspace special:chat, class:^(chat)$
+windowrule = float, center, size 900 600, workspace special:chat, class:^(chat)$
+windowrule = workspace special:news, class:^(news)$
+windowrule = float, center, size 900 600, workspace special:news, class:^(news)$
+
+# windowrule = layer:above,class:rsvp
+windowrule = float,class:rsvp
+windowrule = pin,class:rsvp
+windowrule = center,class:rsvp
+windowrule = size 1100 150,class:rsvp
+windowrule = float,title:cheatsh
+windowrule = float,title:read
+# windowrule = layer:above,title:read
+
+windowrule = float,title:dropdown
+windowrule = center,title:dropdown
+windowrule = size 1000 1150,title:dropdown
+
+windowrule = float,title:music
+windowrule = center,title:music
+windowrule = size 1000 1150,title:music
+
+windowrule = float,class:qb
+windowrule = center,class:qb
+windowrule = size 700 400,class:qb
+
+windowrule = float,title:audio
+windowrule = center,title:audio
+windowrule = size 500 150,title:audio
+
+windowrule = float,title:videopopup
+windowrule = pin,title:videopopup
+windowrule = nofocus,title:videopopup
+# windowrule = layer:above,title:videopopup
+windowrule = size 380 210,title:videopopup
+# windowrule = position 1530 1330,title:videopopup
+
+windowrule = float,class:application.Main
+windowrule = float,class:ovh.miroslaw.timefx.TimeFX
+
+windowrule = float,title:task
+windowrule = center,title:task
+windowrule = size 1000 1150,title:task
+
+windowrule = float,title:newsboat
+windowrule = center,title:newsboat
+windowrule = size 1080 1150,title:newsboat
+
+windowrule = float,title:ytfzf
+windowrule = center,title:ytfzf
+windowrule = size 1000 900,title:ytfzf
+
+windowrule = float,title:chat
+windowrule = center,title:chat
+windowrule = size 1000 800,title:chat
+
+windowrule = float,title:scratchpad
+windowrule = center,title:scratchpad
+windowrule = size 1000 800,title:scratchpad
+
+## layer
+layerrule = noanim, namespace:rofi
+layerrule = blur,rofi
+layerrule = ignorezero,rofi
+layerrule = blur,notifications
+layerrule = ignorezero,notifications
 #}}} 
+# xwayland {
+#     force_zero_scaling = true
+# }
 
 #{{{ ## INPUT ###
 # See https://wiki.hyprland.org/Configuring/Monitors/
