--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -2,21 +2,21 @@
 #{{{ ## AUTOSTART ###
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-
 exec-once = mega-sync
 exec-once = $TERMINAL
 exec-once = systemctl  --user start hyprpolkitagent
-exec-once = kanata -c $HOME/.config/kanata/kanata.kbd
-# exec-once = hyprscratch init clean no-auto-reload
-exec-once = hyprscratch init
-# exec-once = /home/miro/.bin/kanata -c $HOME/.config/kanata/kanata.kbd
+exec-once = ${CARGO_HOME}/bin/kanata
+
 exec-once = waybar
-exec-once = wl-paste --watch cliphist store
+exec-once = nm-applet --indicator
+# exec-once = wl-paste --watch cliphist store
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 # exec-once = wl-paste -t text --watch clipman store --max-items=30 --histpath="~/.local/share/clipman/clipman.json" 1>> ~/.local/share/clipman/clipman.log 2>&1
 # exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman/clipman-primary.json"
 # exec-once = setbg
-# exec-once = dunst
 # exec-once = pueued
+# exec-once = kanata -c $HOME/.config/kanata/kanata.kbd
 # sleep 200 && newsboat -x reload &
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
@@ -28,7 +28,7 @@ exec-once = wl-paste --watch cliphist store
 $sup = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $sup, A, exec, hyprctl notify -1 10000 0 $PATH
+bind = $sup, A, exec, notify-send "$CARGO_HOME"
 bind = $sup, Return, exec, $TERMINAL
 bind = $sup SHIFT, Return, exec, $TERM_LT
 bind = $sup, Q, killactive,
@@ -136,6 +136,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 #}}} 
 
 #{{{ ## APPS
+bind = $sup, Escape, exec, makoctl dismiss -a
+bind = $sup SHIFT, Escape, exec, makoctl restore
 bind = $sup, F1, exec, $BROWSER
 bind = $sup, F2, exec, /opt/idea-IU-212.5284.40/bin/idea.sh
 bind = $sup, F3, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "vifm" "vifm")
@@ -159,7 +161,8 @@ bind = , F12, togglespecialworkspace, drop
 # bind = , F10, togglespecialworkspace, chat
 
 # ROFI
-bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
+bind = $sup, D, exec, $ROFI/windows.sh
+# bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
 bind = $sup SHIFT, D, exec, rofi -modi drun,keys,run -show drun -show-icons -sidebar-mode -monitor -4 -matching fuzzy
 bind = $sup CONTROL, D, exec, $ROFI/mount-launcher.sh
 # bind = $ALT, Space, exec, $ROFI/expander/expander.sh
@@ -296,16 +299,16 @@ windowrule = float,class:qb
 windowrule = center,class:qb
 windowrule = size 700 400,class:qb
 
-windowrule = float,title:audio
-windowrule = center,title:audio
-windowrule = size 500 150,title:audio
+windowrule = float,class:audio
+windowrule = center,class:audio
+windowrule = size 500 150,class:audio
 
-windowrule = float,title:videopopup
-windowrule = pin,title:videopopup
-windowrule = nofocus,title:videopopup
-# windowrule = layer:above,title:videopopup
-windowrule = size 380 210,title:videopopup
-# windowrule = position 1530 1330,title:videopopup
+windowrule = float,class:videopopup
+windowrule = pin,class:videopopup
+windowrule = size 380 210,class:videopopup
+windowrule = move 100%-383 100%-230,class:videopopup
+# windowrule = noborder,class:videopopup
+# windowrule = nofocus,class:videopopup
 
 windowrule = float,class:application.Main
 windowrule = float,class:ovh.miroslaw.timefx.TimeFX
