--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -44,6 +44,8 @@ volume-max=200                          # maximum volume in %, everything above 
 # volume=100                              # default volume, 100 = unchanged
 
 [stream]
+wayland-app-id=video
+x11-name=video
 fs
 no-terminal 
 force-window 
@@ -75,6 +77,8 @@ demuxer-max-back-bytes=350MiB
 # keep-open=always                        # keep the player open when a file's end is reached
 
 [stream-popup]
+wayland-app-id=videopopup
+x11-name=videopopup
 no-terminal 
 force-window 
 prefetch-playlist=yes
@@ -89,6 +93,8 @@ demuxer-max-bytes=600MiB
 demuxer-max-back-bytes=150MiB
 
 [stream-audio]
+wayland-app-id=audio
+x11-name=audio
 no-video 
 prefetch-playlist=yes
 
