remove zprofile; add local/bin folder and move apps to it

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -2,11 +2,14 @@
 ["tmp-chezmoi/fasder"]
 	type = "git-repo" 
 	url = "https://github.com/wyne/fasder.git"
-["tmp-chezmoi/kanata"]
-	type = "git-repo" 
-	url = "https://github.com/jtroo/kanata.git"
 [".config/zgenom"]
 	type = "git-repo" 
 	url = "https://github.com/jandamm/zgenom.git"
+# ["tmp-chezmoi/rdrview"]
+# 	type = "git-repo" 
+# 	url = "https://github.com/eafer/rdrview.git"
+# ["tmp-chezmoi/kanata"]
+# 	type = "git-repo" 
+# 	url = "https://github.com/jtroo/kanata.git"
 
 # files
