--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-
 #{{{ ## AUTOSTART ###
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
@@ -143,7 +142,7 @@ bind = $sup, F2, exec, /opt/idea-IU-212.5284.40/bin/idea.sh
 bind = $sup, F3, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "vifm" "vifm")
 bind = $sup, F4, exec, pcmanfm
 bind = $sup, F5, exec, keecli.sh
-bind = $sup, F6, exec, scratchpad.sh newsboat "wezterm start --class newsboat -- newsboat"
+bind = $sup, F6, exec, eval $(printf "$TERMINAL $TERMINAL_RUN" "newsboat" "newsboat")
 bind = $sup, F7, exec, wezterm start --class 'note' --cwd ~/Documents/notebook -- nvim
 bind = $sup, F8, exec, task sync && scratchpad.sh task "$TERM_LT -c task -n -e task taskwarrior-tui"
 bind = $sup, F9, exec, todo.lua add
@@ -194,8 +193,8 @@ bind = $sup, BackSpace, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "top" "btop"
 bind = $sup SHIFT, BackSpace, exec, $ROFI/kill
 bind = $sup CONTROL, BackSpace, exec, xkill
 
-bind = $sup SHIFT, U, exec, scratchpad.sh newsboat "wezterm start --class newsboat -- newsboat"
-bind = $sup CONTROL, U, exec, task sync && scratchpad.sh task "$TERM_LT -c task -n task -e taskwarrior-tui"
+bind = $sup SHIFT, U, exec, eval $(printf "$TERMINAL $TERMINAL_RUN" "newsboat" "newsboat")
+bind = $sup CONTROL, U, exec, task sync && eval $(printf "$TERM_LT $TERM_LT_RUN" "task" "taskwarrior-tui")
 
 # pomodoro
 bind = $sup, X, exec, pomodoro.lua add -n
@@ -214,16 +213,95 @@ bind = $sup CONTROL, T, exec, search.lua --enpl -p
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# move
+windowrule = workspace 3, initialClass:^(vifm)$
+windowrule = workspace 9, initialClass:^(top)$
+windowrule = workspace 5 silent, initialClass:^(audio)$
+# or
+# windowrule = workspace special:drop, class:^(drop)$
+
+windowrule = float,class:file-roller
+windowrule = center,class:file-roller
+
+# windowrule = float,class:SpeedCrunch
+# windowrule = center,class:SpeedCrunch
+# windowrule = size 500 500,class:SpeedCrunch
+
+windowrule = center,class:KeePassXC
+windowrule = size 1100 700,class:KeePassXC
+
+windowrule = float, title:^(pavucontrol)$
+windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
+windowrule = float, title:^(blueman-manager)$
+windowrule = float, title:^(nm-connection-editor)$
+
+windowrule = float,class:zenity
+windowrule = float,class:^([Yy]ad)$
+windowrule = float, class:^([Qq]alculate-gtk)$
+windowrule = float,class:menu
+
+# scratchpads 
+# workspace = special:special, gapsout:30
+windowrule = workspace special:drop, class:^(drop)$
+windowrule = float, class:^(drop)$
+windowrule = size 90% 70%, class:^(drop)$
+windowrule = move 5% 50, class:^(drop)$
+windowrule = workspace special:chat, class:^(chat)$
+windowrule = float, class:^(chat)$
+windowrule = size 900 600, class:^(chat)$
+windowrule = workspace special:news, class:^(news)$
+windowrule = float, class:^(news)$
+windowrule = size 900 600, class:^(news)$
+
+windowrule = float,class:rsvp
+windowrule = pin,class:rsvp
+windowrule = center,class:rsvp
+windowrule = size 1100 150,class:rsvp
+windowrule = float,class:cheatsh
+windowrule = float,class:read
+
+windowrule = float,class:task
+windowrule = center,class:task
+windowrule = size 1000 1150,class:task
+
+windowrule = float,class:music
+windowrule = center,class:music
+windowrule = size 1000 1150,class:music
+
+windowrule = float,class:audio
+windowrule = center,class:audio
+windowrule = size 500 150,class:audio
+
+windowrule = float,class:qb
+windowrule = center,class:qb
+windowrule = size 700 400,class:qb
+
+windowrule = float,class:ytfzf
+windowrule = center,class:ytfzf
+windowrule = size 1000 900,class:ytfzf
+
+windowrule = float,class:videopopup
+windowrule = pin,class:videopopup
+windowrule = size 380 210,class:videopopup
+windowrule = move 100%-383 100%-230,class:videopopup
+# windowrule = noborder,class:videopopup
+# windowrule = nofocus,class:videopopup
+
+windowrule = float,class:application.Main
+windowrule = float,class:ovh.miroslaw.timefx.TimeFX
+
+## layer
+layerrule = noanim, namespace:rofi
+layerrule = blur,rofi
+layerrule = ignorezero,rofi
+layerrule = blur,notifications
+layerrule = ignorezero,notifications
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
+# windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = workspace 6 silent, class:^(vifm)$
 # Dialog windows – float+center these windows.
 windowrule = center, title:^(Open File)(.*)$
 windowrule = center, title:^(Select a File)(.*)$
@@ -244,101 +322,9 @@ windowrule = float, title:^(Library)(.*)$
 windowrule = float, title:^(File Upload)(.*)$
 windowrule = float, title:^(.*)(wants to save)$
 windowrule = float, title:^(.*)(wants to open)$
-
 windowrule = float, initialTitle:(Open Files)
 windowrule = size 70% 60%, initialTitle:(Open Files)
 
-windowrule = float, center,class:file-roller
-# windowrule = center,class:file-roller
-
-# windowrule = float,class:SpeedCrunch
-# windowrule = center,class:SpeedCrunch
-# windowrule = size 500 500,class:SpeedCrunch
-
-windowrule = float, center, size 1100 700,class:KeePassXC
-# windowrule = center,class:KeePassXC
-# windowrule = size 1100 700,class:KeePassXC
-
-windowrule = float, title:^(pavucontrol)$
-windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
-windowrule = float, title:^(blueman-manager)$
-windowrule = float, title:^(nm-connection-editor)$
-
-windowrule = float,class:zenity
-windowrule = float,class:^([Yy]ad)$
-windowrule = float, class:^([Qq]alculate-gtk)$
-windowrule = float,class:menu
-
-# scratchpads 
-# workspace = special:special, gapsout:30
-windowrule = workspace special:drop, class:^(drop)$
-windowrule = float, center, size 900 600, workspace special:drop, class:^(drop)$
-windowrule = workspace special:chat, class:^(chat)$
-windowrule = float, center, size 900 600, workspace special:chat, class:^(chat)$
-windowrule = workspace special:news, class:^(news)$
-windowrule = float, center, size 900 600, workspace special:news, class:^(news)$
-
-# windowrule = layer:above,class:rsvp
-windowrule = float,class:rsvp
-windowrule = pin,class:rsvp
-windowrule = center,class:rsvp
-windowrule = size 1100 150,class:rsvp
-windowrule = float,title:cheatsh
-windowrule = float,title:read
-# windowrule = layer:above,title:read
-
-windowrule = float,title:dropdown
-windowrule = center,title:dropdown
-windowrule = size 1000 1150,title:dropdown
-
-windowrule = float,title:music
-windowrule = center,title:music
-windowrule = size 1000 1150,title:music
-
-windowrule = float,class:qb
-windowrule = center,class:qb
-windowrule = size 700 400,class:qb
-
-windowrule = float,class:audio
-windowrule = center,class:audio
-windowrule = size 500 150,class:audio
-
-windowrule = float,class:videopopup
-windowrule = pin,class:videopopup
-windowrule = size 380 210,class:videopopup
-windowrule = move 100%-383 100%-230,class:videopopup
-# windowrule = noborder,class:videopopup
-# windowrule = nofocus,class:videopopup
-
-windowrule = float,class:application.Main
-windowrule = float,class:ovh.miroslaw.timefx.TimeFX
-
-windowrule = float,title:task
-windowrule = center,title:task
-windowrule = size 1000 1150,title:task
-
-windowrule = float,title:newsboat
-windowrule = center,title:newsboat
-windowrule = size 1080 1150,title:newsboat
-
-windowrule = float,title:ytfzf
-windowrule = center,title:ytfzf
-windowrule = size 1000 900,title:ytfzf
-
-windowrule = float,title:chat
-windowrule = center,title:chat
-windowrule = size 1000 800,title:chat
-
-windowrule = float,title:scratchpad
-windowrule = center,title:scratchpad
-windowrule = size 1000 800,title:scratchpad
-
-## layer
-layerrule = noanim, namespace:rofi
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
 #}}} 
 # xwayland {
 #     force_zero_scaling = true
