--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -186,7 +186,7 @@ bind = $sup CONTROL, I, exec, ~/.config/qutebrowser/userscripts/session.sh webap
 # remove video, audio or restore
 bind = $sup SHIFT, Delete, exec, rmmpv-playing.sh
 bind = $sup CONTROL, Delete, exec, rmmpd-playing.sh
-bind = $sup, Delete, exec, echo 0 | trash-restore "$(trash-list | sort -r | cut -d" " -f3- | rofi -dmenu -threads 0 -monitor -4 -i -l 25 -p "restore" -theme-str 'window \{width:  90%;\}')"
+bind = $sup, Delete, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "trash" "gomi --restore")
 
 # linux process
 bind = $sup, BackSpace, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "top" "btop")
@@ -257,20 +257,25 @@ windowrule = float,class:rsvp
 windowrule = pin,class:rsvp
 windowrule = center,class:rsvp
 windowrule = size 1100 150,class:rsvp
+
 windowrule = float,class:cheatsh
 windowrule = float,class:read
 
 windowrule = float,class:task
 windowrule = center,class:task
-windowrule = size 1000 1150,class:task
+windowrule = size 1000 90%,class:task
 
 windowrule = float,class:music
 windowrule = center,class:music
-windowrule = size 1000 1150,class:music
+windowrule = size 1000 90%,class:music
 
 windowrule = float,class:audio
 windowrule = center,class:audio
 windowrule = size 500 150,class:audio
+
+windowrule = float,class:trash
+windowrule = center,class:trash
+windowrule = size 700 90%,class:trash
 
 windowrule = float,class:qb
 windowrule = center,class:qb
