--- a/dot_config/swayimg/config
+++ b/dot_config/swayimg/config
@@ -60,7 +60,23 @@ Escape = exit
 q = exit
 
 # COMMANDS
-Delete = exec rm -f '%' && echo "File removed: %"; skip_file
+Delete = exec rm -f '%' && notify-send "File removed: %"; skip_file
+x = exec gomi '%' && notify-send "File removed: %";
+; X { command(xclip-cutfile $1); }
+; copy name
+y = exec wl-copy '%' && notify-send "Copied file name %"
+; copy path
+Shift+y = exec pwd | wl-copy && notify-send "Copied path $(pwd)"
+; copy image doesn't work
+; Ctrl+y = exec wl-copy --type image/png < '%' && notify-send "Copied image %"
+;ci { command(|xclip-copyfile); }
+; set wallpaper
+; W { command(feh --no-fehbg --bg-fill $); }
+;ocr image
+; e { command(echo -n $1 | xargs -I {} tesseract {} {}); }
+; E { command(-cat | xargs -I {} tesseract {} {}); }
+;rename but with default png extension
+; r { command(zenity --entry | xargs -I {} mv $1 {}.png); }
 1 = exec mkdir -p 1 && mv '%' 1 && echo "File moved: %" && notify-send "Moved to 1: '%'";
 2 = exec mkdir -p 2 && mv '%' 2 && echo "File moved: %" && notify-send "Moved to 2: '%'";
 3 = exec mkdir -p 3 && mv '%' 3 && echo "File moved: %" && notify-send "Moved to 3: '%'";
