config bulk tweaks

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -105,6 +105,15 @@ bind = $sup CONTROL, J, resizeactive, 0% 10%
 bind = $sup CONTROL, K, resizeactive, 0% -10%
 bindm = $sup, mouse:272, movewindow
 bindm = $sup, mouse:273, resizewindow
+# double_click but it had to be in floting mode in order to have sense
+# bind = , mouse:272, exec, sleep 0.2 && hyprctl dispatch submap reset
+# bind = , mouse:272, submap, double_click
+# submap = double_click
+# bind = , mouse:272, togglefloating,
+# submap = reset
+# bindc = , mouse:273, togglefloating
+# LMB -> 272
+# RMB -> 273
 
 # Laptop multimedia keys for volume and LCD brightness
 # bind = $sup, Plus, exec, pactl set-sink-volume "$(pacmd list-sinks | grep '* index' | awk '{print $3}')" +15%
