mpv add select.lua bindings and make script executable

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -236,6 +236,7 @@ windowrule = center,class:file-roller
 # windowrule = center,class:SpeedCrunch
 # windowrule = size 500 500,class:SpeedCrunch
 
+windowrule = fullscreen, class:mpv
 windowrule = center,class:KeePassXC
 windowrule = size 1100 700,class:KeePassXC
 
