--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -3,6 +3,8 @@
 # Save video's volume amount and position
 # It's when you quit mpv without kills (not working in Shift+Q)
 save-position-on-quit
+save-watch-history
+
 input-ipc-server=/tmp/mpv.socket
 script-opts=ytdl_hook-ytdl_path=yt-dlp
 screenshot-directory='~/Pictures/mpv/'
@@ -113,9 +115,9 @@ demuxer-max-back-bytes=50MiB
 # hwdec=auto
 # screenshot-format=png
 # screenshot-png-compression=8
-# watch-later-directory='~/.mpv/watch_later'
 # write-filename-in-watch-later-config
 # watch-later-options-remove=fullscreen
+# watch-later-directory='~/.mpv/watch_later'
 
 # [extension.webm]
 # loop videos with *.webm extension
