hypr tweak window tabs

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,4 +1,7 @@
 #{{{ ## AUTOSTART ###
+# for KeePassXC maybe it should be wayland
+# env = QT_QPA_PLATFORM,xcb
+env = QT_QPA_PLATFORM,wayland
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 exec-once = mega-sync
@@ -39,12 +42,12 @@ bind = $sup SHIFT, J, swapnext,
 bind = $sup, F, fullscreen, 1
 bind = $sup CTRL, F, fullscreen, 0
 bind = $sup, U, focusurgentorlast,
-bind = $sup, Z, movetoworkspacesilent, special
+# why silent?
+bind = $sup, Z, movetoworkspacesilent, special:spec
 # to exit special mode; move window to any window
-bind = $sup CTRL, Z, togglespecialworkspace, 
-# Example special workspace (scratchpad)
-bind = $sup,  S, movetoworkspace, special:magic
-bind = $sup CTRL, S, togglespecialworkspace, magic
+bind = $sup CTRL, Z, togglespecialworkspace,special:spec 
+# bind = $sup,  S, 
+# bind = $sup CTRL, S, 
 
 # Select previous / next active desktop
 # bind = $sup, N, workspace, next ??
@@ -174,7 +177,7 @@ bind = $sup, D, exec, $ROFI/windows.sh
 bind = $sup SHIFT, D, exec, rofi -modi drun,keys,run -show drun -show-icons -sidebar-mode -monitor -4 -matching fuzzy
 bind = $sup CONTROL, D, exec, $ROFI/mount-launcher.sh
 # bind = $ALT, Space, exec, $ROFI/expander/expander.sh
-bind = $sup, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $sup, V, exec, clip.sh
 # bind = $sup, V, exec, cliphist list | GDK_SCALE=2 rofi -dmenu | cliphist decode | wl-copy
 
 # Chat
@@ -237,8 +240,10 @@ windowrule = center,class:file-roller
 # windowrule = size 500 500,class:SpeedCrunch
 
 windowrule = fullscreen, class:mpv
+windowrule = float, class:^(KeePassXC)$
+windowrule = opacity 1.0 0.1, class:^(KeePassXC)$
 windowrule = center,class:KeePassXC
-windowrule = size 1100 700,class:KeePassXC
+windowrule = size 1100 600,class:KeePassXC
 
 windowrule = float, title:^(pavucontrol)$
 windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
