add group layout to hypr

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -46,8 +46,6 @@ bind = $sup, U, focusurgentorlast,
 bind = $sup, Z, movetoworkspacesilent, special:spec
 # to exit special mode; move window to any window
 bind = $sup CTRL, Z, togglespecialworkspace,special:spec 
-# bind = $sup,  S, 
-# bind = $sup CTRL, S, 
 
 # Select previous / next active desktop
 # bind = $sup, N, workspace, next ??
@@ -55,21 +53,30 @@ bind = $sup, N, workspace, m+1
 bind = $sup, P, workspace, m-1
 bind = $sup, TAB, workspace, previous
 # First empty
-bind = $sup CONTROL, N, workspace, empty:next
-bind = $sup CONTROL, P, workspace, empty:prev
+bind = $sup CTRL, N, workspace, empty:next
+bind = $sup CTRL, P, workspace, empty:prev
 
 # Move focus
 bind = $sup, H, movefocus, l
 bind = $sup, J, movefocus, d
 bind = $sup, K, movefocus, u
 bind = $sup, L, movefocus, r
-bind = $sup, left, movefocus, l
-bind = $sup, right, movefocus, r
-bind = $sup, up, movefocus, u
-bind = $sup, down, movefocus, d
 
 bind = ALT, Tab, cyclenext,
-# TODO
+
+# Tabbs/Groups
+bind = $sup, G, togglegroup
+bind = $sup CTRL, H, movewindoworgroup, l
+bind = $sup CTRL, L, movewindoworgroup, r
+bind = $sup CTRL, K, movewindoworgroup, u
+bind = $sup CTRL, J, movewindoworgroup, d
+bind = $sup SHIFT, H, changegroupactive, b
+bind = $sup SHIFT, L, changegroupactive, f
+# TODO check if it's a group and use movegroupwindow or moveactive
+bind = $sup SHIFT, K, movegroupwindow, b
+bind = $sup SHIFT, J, movegroupwindow, f
+
+# TODO movewindoworgroup does the same
 # bind = $sup SHIFT, H, moveactive, l
 # bind = $sup SHIFT, J, moveactive, d
 # bind = $sup SHIFT, K, moveactive, u
@@ -102,10 +109,12 @@ bind = $sup, mouse_down, workspace, e+1
 bind = $sup, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bind = $sup CONTROL, L, resizeactive, 10% 0%
-bind = $sup CONTROL, H, resizeactive, -10% 0%
-bind = $sup CONTROL, J, resizeactive, 0% 10%
-bind = $sup CONTROL, K, resizeactive, 0% -10%
+# or binde to SHIFT hjkl
+bind = $sup, right, resizeactive, 10% 0%
+bind = $sup, left, resizeactive, -10% 0%
+bind = $sup, down, resizeactive, 0% 10%
+bind = $sup, up, resizeactive, 0% -10%
+
 bindm = $sup, mouse:272, movewindow
 bindm = $sup, mouse:273, resizewindow
 # double_click but it had to be in floting mode in order to have sense
