fix wayland and ydtool script

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,7 +1,8 @@
 #{{{ ## AUTOSTART ###
 # for KeePassXC maybe it should be wayland
 # env = QT_QPA_PLATFORM,xcb
-env = QT_QPA_PLATFORM,wayland
+# nvim-qt doesn't work with wayland
+# env = QT_QPA_PLATFORM,wayland
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 exec-once = mega-sync
