--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 #{{{ ## AUTOSTART ###
 # for KeePassXC maybe it should be wayland
 # env = QT_QPA_PLATFORM,xcb
+env = QT_QPA_PLATFORM,wayland;xcb
+$scratchpad = "$XDG_CONFIG_HOME/hypr/scratchpad.clj"
 # nvim-qt doesn't work with wayland
 # env = QT_QPA_PLATFORM,wayland
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
@@ -31,22 +33,21 @@ exec-once = wl-paste --type image --watch cliphist store
 $sup = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $sup, A, exec, notify-send "$CARGO_HOME"
+bind = $sup, A, exec, notify-send $scratchpad
 bind = $sup, Return, exec, $TERMINAL
 bind = $sup SHIFT, Return, exec, $TERM_LT
 bind = $sup, Q, killactive,
 bind = $sup SHIFT, Q, exec, qu.clj kill-any
 bind = $sup, Space, togglefloating,
-bind = $sup SHIFT, Space, pseudo, # dwindle
-bind = $sup SHIFT, L, togglesplit, # dwindle
-bind = $sup SHIFT, J, swapnext,
+# bind = $sup SHIFT, Space, pseudo, # dwindle meh
+bind = $sup, backslash, togglesplit, # dwindle
 bind = $sup, F, fullscreen, 1
 bind = $sup CTRL, F, fullscreen, 0
 bind = $sup, U, focusurgentorlast,
-# why silent?
-bind = $sup, Z, movetoworkspacesilent, special:spec
+# silent will move and hide window
+bind = $sup, Z, movetoworkspacesilent, special:pad
 # to exit special mode; move window to any window
-bind = $sup CTRL, Z, togglespecialworkspace,special:spec 
+bind = $sup CTRL, Z, togglespecialworkspace, pad 
 
 # Select previous / next active desktop
 # bind = $sup, N, workspace, next ??
@@ -76,6 +77,7 @@ bind = $sup SHIFT, L, changegroupactive, f
 # TODO check if it's a group and use movegroupwindow or moveactive
 bind = $sup SHIFT, K, movegroupwindow, b
 bind = $sup SHIFT, J, movegroupwindow, f
+# bind = $sup SHIFT, J, swapnext,
 
 # TODO movewindoworgroup does the same
 # bind = $sup SHIFT, H, moveactive, l
@@ -159,33 +161,30 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 #{{{ ## APPS
 bind = $sup, Escape, exec, makoctl dismiss -a
 bind = $sup SHIFT, Escape, exec, makoctl restore
+bind = $sup CTRL, F1, exec, "$XDG_CONFIG_HOME/hypr/rofi_keybinds.sh"
 bind = $sup, F1, exec, $BROWSER
 bind = $sup, F2, exec, /opt/idea-IU-212.5284.40/bin/idea.sh
 bind = $sup, F3, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "vifm" "vifm")
 bind = $sup, F4, exec, pcmanfm
 bind = $sup, F5, exec, keecli.sh
-bind = $sup, F6, exec, eval $(printf "$TERMINAL $TERMINAL_RUN" "newsboat" "newsboat")
+bind = $sup, F6, exec, $scratchpad $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
 bind = $sup, F7, exec, wezterm start --class 'note' --cwd ~/Documents/notebook -- nvim
-bind = $sup, F8, exec, task sync && scratchpad.sh task "$TERM_LT -c task -n -e task taskwarrior-tui"
+bind = $sup, F8, exec, task sync && $scratchpad task $(printf "$TERM_LT $TERM_LT_RUN" task taskwarrior-tui)
 bind = $sup, F9, exec, todo.lua add
 bind = $sup, F10, exec, mpv.lua -o ~/Videos
 bind = $sup, F11, exec, sh -c $(ls ~/.bin | rofi -dmenu)
 bind = $sup, F12, exec, rofi -show power-menu -modi power-menu:$ROFI/power.sh
 
 # Scratchpad
-# https://github.com/sashetophizika/hyprscratch
-bind = SHIFT, F12, exec, wezterm start --class drop
-# todo script for toggle 
-bind = , F12, togglespecialworkspace, drop
-# bind = , F11, exec, wezterm start --class chat
-# bind = , F9, exec, ~/.config/hypr/scratchpad.sh news "wezterm start --class news -- top"
-# bind = , F10, togglespecialworkspace, chat
+bind =  ,F12, exec, $scratchpad drop $(printf "$TERMINAL $TERM_RUN" "drop" "")
+bind = $sup SHIFT, U, exec, $scratchpad $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
+bind = $sup CTRL, U, exec, task sync && $scratchpad $(printf "$TERM_LT $TERM_LT_RUN" "task" "taskwarrior-tui")
 
 # ROFI
 bind = $sup, D, exec, $ROFI/windows.sh
 # bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
 bind = $sup SHIFT, D, exec, rofi -modi drun,keys,run -show drun -show-icons -sidebar-mode -monitor -4 -matching fuzzy
-bind = $sup CONTROL, D, exec, $ROFI/mount-launcher.sh
+bind = $sup CTRL, D, exec, $ROFI/mount-launcher.sh
 # bind = $ALT, Space, exec, $ROFI/expander/expander.sh
 bind = $sup, V, exec, clip.sh
 # bind = $sup, V, exec, cliphist list | GDK_SCALE=2 rofi -dmenu | cliphist decode | wl-copy
@@ -193,40 +192,37 @@ bind = $sup, V, exec, clip.sh
 # Chat
 bind = $sup, R, exec, chat.clj ask --output scratchpad
 bind = $sup SHIFT, R, exec, chat.clj action --action-list --output scratchpad
-bind = $sup CONTROL, R, exec, chat.clj ask --list --output scratchpad
+bind = $sup CTRL, R, exec, chat.clj ask --list --output scratchpad
 
 # youtube
 bind = $sup, Y, exec, mpv.lua -o
 bind = $sup SHIFT, Y, exec, qu.clj menu
-bind = $sup CONTROL, Y, exec, yt.clj search --input
+bind = $sup CTRL, Y, exec, yt.clj search --input
 
 # internet
 bind = $sup, I, exec, rofi-buku
 bind = $sup SHIFT, I, exec, ~/.config/qutebrowser/userscripts/session.sh
-bind = $sup CONTROL, I, exec, ~/.config/qutebrowser/userscripts/session.sh webapp
+bind = $sup CTRL, I, exec, ~/.config/qutebrowser/userscripts/session.sh webapp
 
 # remove video, audio or restore
 bind = $sup SHIFT, Delete, exec, rmmpv-playing.sh
-bind = $sup CONTROL, Delete, exec, rmmpd-playing.sh
+bind = $sup CTRL, Delete, exec, rmmpd-playing.sh
 bind = $sup, Delete, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "trash" "gomi --restore")
 
 # linux process
 bind = $sup, BackSpace, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "top" "btop")
 bind = $sup SHIFT, BackSpace, exec, $ROFI/kill
-bind = $sup CONTROL, BackSpace, exec, xkill
-
-bind = $sup SHIFT, U, exec, eval $(printf "$TERMINAL $TERMINAL_RUN" "newsboat" "newsboat")
-bind = $sup CONTROL, U, exec, task sync && eval $(printf "$TERM_LT $TERM_LT_RUN" "task" "taskwarrior-tui")
+bind = $sup CTRL, BackSpace, exec, hyprctl kill
 
 # pomodoro
 bind = $sup, X, exec, pomodoro.lua add -n
 bind = $sup SHIFT, X, exec, pomodoro.lua stop -n && task sync
-bind = $sup CONTROL, X, exec, pomodoro.lua menu -n
+bind = $sup CTRL, X, exec, pomodoro.lua menu -n
 
 # translator
 bind = $sup, T, exec, search.lua --enpl -c
 bind = $sup SHIFT, T, exec, $ROFI/tran/trans-launcher.sh
-bind = $sup CONTROL, T, exec, search.lua --enpl -p
+bind = $sup CTRL, T, exec, search.lua --enpl -p
 
 #}}} 
 
@@ -393,6 +389,10 @@ device {
     sensitivity = -0.5
 }
 #}}} 
+
+dwindle {
+  # pseudotile = yes
+}
 
 source = ~/.config/hypr/look.conf
 # source = ~/.config/hypr/comments.conf
