--- a/dot_config/hypr/look.conf
+++ b/dot_config/hypr/look.conf
@@ -115,5 +115,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+	  enable_swallow = true
+	  swallow_regex = ^(org.wezfurlong.wezterm|foot|footclient)$
 }
 
